Bug 259916 - Crash on matching a downloaded payment with a scheduled payment
Summary: Crash on matching a downloaded payment with a scheduled payment
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-15 05:17 UTC by Mike Wolfe
Modified: 2010-12-15 10:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wolfe 2010-12-15 05:17:03 UTC
Application: kmymoney (4.5.90-svn1203605)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-26-generic i686
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
Happens every time.  To cause a crash, I use the OFX direct download to get a statement for my checking account.  A message pops up saying that KMyMoney has found a transaction online matching "student loan payment", and asks if I want to match it.  Selecting "yes" causes the crash, while selecting "no" seems to work normally.

The crash can be reproduced every time.

 -- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0xb77c6950 (LWP 8049))]

Thread 2 (Thread 0xb3cf9b70 (LWP 8050)):
#0  0x0042b422 in __kernel_vsyscall ()
#1  0x016d6b86 in poll () from /lib/tls/i686/cmov/libc.so.6
#2  0x089074eb in g_poll () from /lib/libglib-2.0.so.0
#3  0x088fa0ac in ?? () from /lib/libglib-2.0.so.0
#4  0x088fa4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x05c7e60f in QEventDispatcherGlib::processEvents (this=0xb3300468, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#6  0x05c51059 in QEventLoop::processEvents (this=0xb3cf9270, flags=) at kernel/qeventloop.cpp:149
#7  0x05c514aa in QEventLoop::exec (this=0xb3cf9270, flags=...) at kernel/qeventloop.cpp:201
#8  0x05b4d5a8 in QThread::exec (this=0x91586c8) at thread/qthread.cpp:487
#9  0x05c30c1b in QInotifyFileSystemWatcherEngine::run (this=0x91586c8) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x05b5032e in QThreadPrivate::start (arg=0x91586c8) at thread/qthread_unix.cpp:248
#11 0x002b896e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#12 0x016e4a4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb77c6950 (LWP 8049)):
[KCrash Handler]
#6  0x00000019 in ?? ()
#7  0x05c69ba3 in QObject::disconnect (sender=0xa601c78, signal=0x0, receiver=0xa68cde0, method=0x0) at kernel/qobject.cpp:2747
#8  0x0837860d in QObject::disconnect (this=0xa68cde0, __in_chrg=<value optimized out>) at /usr/include/qt4/QtCore/qobject.h:229
#9  ~TransactionEditor (this=0xa68cde0, __in_chrg=<value optimized out>) at /home/wolfemi1/svn/kmymoney/kmymoney/dialogs/transactioneditor.cpp:86
#10 0x0837880a in ~StdTransactionEditor (this=0xa68cde0, __in_chrg=<value optimized out>) at /home/wolfemi1/svn/kmymoney/kmymoney/dialogs/transactioneditor.cpp:707
#11 0x08451263 in MyMoneyStatementReader::processTransactionEntry (this=0xa5e9d48, t_in=...) at /home/wolfemi1/svn/kmymoney/kmymoney/converter/mymoneystatementreader.cpp:1186
#12 0x08459435 in MyMoneyStatementReader::import (this=0xa5e9d48, s=..., messages=...) at /home/wolfemi1/svn/kmymoney/kmymoney/converter/mymoneystatementreader.cpp:322
#13 0x080b7b01 in KMyMoneyApp::slotStatementImport (this=0x8d4f520, s=...) at /home/wolfemi1/svn/kmymoney/kmymoney/kmymoney.cpp:2314
#14 0x08581fd5 in KMyMoneyPlugin::KMMStatementInterface::import (this=0x96a4ef8, s=...) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/interfaces/kmmstatementinterface.cpp:44
#15 0x025f3d2a in OfxImporterPlugin::importStatement (this=0x96bf938, s=...) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/ofximporterplugin.cpp:555
#16 0x025f59ed in OfxImporterPlugin::storeStatements (this=0x96bf938, statements=...) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/ofximporterplugin.cpp:690
#17 0x025f5da4 in OfxImporterPlugin::import (this=0x96bf938, filename=...) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/ofximporterplugin.cpp:181
#18 0x025f4bb6 in OfxImporterPlugin::slotImportFile (this=0x96bf938, url=...) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/ofximporterplugin.cpp:663
#19 0x025f5372 in OfxImporterPlugin::qt_metacall (this=0x96bf938, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfa4d8f8)
    at /home/wolfemi1/svn/kmymoney/build/kmymoney/plugins/ofximport/ofximporterplugin.moc:81
#20 0x05c57c9a in QMetaObject::metacall (object=0x96bf938, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xbfa4d8f8) at kernel/qmetaobject.cpp:237
#21 0x05c663d5 in QMetaObject::activate (sender=0x913f768, m=0x2625790, local_signal_index=0, argv=0xbfa4d8f8) at kernel/qobject.cpp:3293
#22 0x02602933 in KOfxDirectConnectDlg::statementReady (this=0x913f768, _t1=...) at /home/wolfemi1/svn/kmymoney/build/kmymoney/plugins/ofximport/dialogs/kofxdirectconnectdlg.moc:95
#23 0x02603691 in KOfxDirectConnectDlg::slotOfxFinished (this=0x913f768) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/dialogs/kofxdirectconnectdlg.cpp:204
#24 0x026039ff in KOfxDirectConnectDlg::qt_metacall (this=0x913f768, _c=QMetaObject::InvokeMetaMethod, _id=37, _a=0xbfa4dac8)
    at /home/wolfemi1/svn/kmymoney/build/kmymoney/plugins/ofximport/dialogs/kofxdirectconnectdlg.moc:81
#25 0x05c57c9a in QMetaObject::metacall (object=0x913f768, cl=QMetaObject::InvokeMetaMethod, idx=37, argv=0xbfa4dac8) at kernel/qmetaobject.cpp:237
#26 0x05c663d5 in QMetaObject::activate (sender=0x99a0308, m=0x6f3dc88, local_signal_index=3, argv=0xbfa4dac8) at kernel/qobject.cpp:3293
#27 0x06dcf183 in KJob::result (this=0x99a0308, _t1=0x99a0308) at ./kjob.moc:194
#28 0x06dcf4e8 in KJob::emitResult (this=0x99a0308) at ../../kdecore/jobs/kjob.cpp:312
#29 0x008acf30 in KIO::SimpleJob::slotFinished (this=0x99a0308) at ../../kio/kio/job.cpp:486
#30 0x008ad96d in KIO::TransferJob::slotFinished (this=0x99a0308) at ../../kio/kio/job.cpp:1058
#31 0x008ab343 in KIO::TransferJob::qt_metacall (this=0x99a0308, _c=QMetaObject::InvokeMetaMethod, _id=47, _a=0xbfa4dd5c) at ./jobclasses.moc:367
#32 0x05c57c9a in QMetaObject::metacall (object=0x99a0308, cl=QMetaObject::InvokeMetaMethod, idx=47, argv=0xbfa4dd5c) at kernel/qmetaobject.cpp:237
#33 0x05c663d5 in QMetaObject::activate (sender=0xa1fede8, m=0xa5bf44, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3293
#34 0x00977707 in KIO::SlaveInterface::finished (this=0xa1fede8) at ./slaveinterface.moc:171
#35 0x0097aa2d in KIO::SlaveInterface::dispatch (this=0xa1fede8, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:175
#36 0x00977bc3 in KIO::SlaveInterface::dispatch (this=0xa1fede8) at ../../kio/kio/slaveinterface.cpp:91
#37 0x0096b088 in KIO::Slave::gotInput (this=0xa1fede8) at ../../kio/kio/slave.cpp:324
#38 0x0096b293 in KIO::Slave::qt_metacall (this=0xa1fede8, _c=QMetaObject::InvokeMetaMethod, _id=30, _a=0xbfa4e06c) at ./slave.moc:82
#39 0x05c57c9a in QMetaObject::metacall (object=0xa1fede8, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfa4e06c) at kernel/qmetaobject.cpp:237
#40 0x05c663d5 in QMetaObject::activate (sender=0x9a5c588, m=0xa58820, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#41 0x00875bd7 in KIO::Connection::readyRead (this=0x9a5c588) at ./connection.moc:92
#42 0x00877f8e in KIO::ConnectionPrivate::dequeue (this=0x929d868) at ../../kio/kio/connection.cpp:82
#43 0x008780be in KIO::Connection::qt_metacall (this=0x9a5c588, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x9c15cb0) at ./connection.moc:79
#44 0x05c57c9a in QMetaObject::metacall (object=0x9a5c588, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x9c15cb0) at kernel/qmetaobject.cpp:237
#45 0x05c62336 in QMetaCallEvent::placeMetaCall (this=0xa4a7650, object=0x9a5c588) at kernel/qobject.cpp:561
#46 0x05c633fe in QObject::event (this=0x9a5c588, e=0xa4a7650) at kernel/qobject.cpp:1248
#47 0x03f174dc in QApplicationPrivate::notify_helper (this=0x8cb4fd8, receiver=0x9a5c588, e=0xa4a7650) at kernel/qapplication.cpp:4300
#48 0x03f1e05e in QApplication::notify (this=0x8cb4f30, receiver=0x9a5c588, e=0xa4a7650) at kernel/qapplication.cpp:3704
#49 0x0060bf2a in KApplication::notify (this=0x8cb4f30, receiver=0x9a5c588, event=0xa4a7650) at ../../kdeui/kernel/kapplication.cpp:302
#50 0x05c52a3b in QCoreApplication::notifyInternal (this=0x8cb4f30, receiver=0x9a5c588, event=0xa4a7650) at kernel/qcoreapplication.cpp:704
#51 0x05c55473 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x8c9b2e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#52 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8c9b2e0) at kernel/qcoreapplication.cpp:1345
#53 0x05c555dd in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#54 0x05c7eadf in QCoreApplication::sendPostedEvents (s=0x8cb7510) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#55 postEventSourceDispatch (s=0x8cb7510) at kernel/qeventdispatcher_glib.cpp:276
#56 0x088f65e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#57 0x088fa2d8 in ?? () from /lib/libglib-2.0.so.0
#58 0x088fa4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#59 0x05c7e5d5 in QEventDispatcherGlib::processEvents (this=0x8c9b4c0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#60 0x03fd7135 in QGuiEventDispatcherGlib::processEvents (this=0x8c9b4c0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#61 0x05c51059 in QEventLoop::processEvents (this=0xbfa4e920, flags=) at kernel/qeventloop.cpp:149
#62 0x05c514aa in QEventLoop::exec (this=0xbfa4e920, flags=...) at kernel/qeventloop.cpp:201
#63 0x044564f3 in QDialog::exec (this=0x913f768) at dialogs/qdialog.cpp:546
#64 0x025f4a3b in OfxImporterPlugin::updateAccount (this=0x96bf938, acc=..., moreAccounts=true) at /home/wolfemi1/svn/kmymoney/kmymoney/plugins/ofximport/ofximporterplugin.cpp:649
#65 0x080b17ee in KMyMoneyApp::slotAccountUpdateOnlineAll (this=0x8d4f520) at /home/wolfemi1/svn/kmymoney/kmymoney/kmymoney.cpp:6896
#66 0x080dd935 in KMyMoneyApp::qt_metacall (this=0x8d4f520, _c=QMetaObject::InvokeMetaMethod, _id=103, _a=0xbfa4ede8) at /home/wolfemi1/svn/kmymoney/build/kmymoney/kmymoney.moc:506
#67 0x05c57c9a in QMetaObject::metacall (object=0x8d4f520, cl=QMetaObject::InvokeMetaMethod, idx=149, argv=0xbfa4ede8) at kernel/qmetaobject.cpp:237
#68 0x05c663d5 in QMetaObject::activate (sender=0x8e53270, m=0x483fd58, local_signal_index=1, argv=0xbfa4ede8) at kernel/qobject.cpp:3293
#69 0x03f10bd9 in QAction::triggered (this=0x8e53270, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#70 0x03f12dcc in QAction::activate (this=0x8e53270, event=QAction::Trigger) at kernel/qaction.cpp:1255
#71 0x04405bd2 in QAction::trigger (this=0xa601c78) at ../../include/QtGui/../../src/gui/kernel/qaction.h:218
#72 QToolButton::nextCheckState (this=0xa601c78) at widgets/qtoolbutton.cpp:1147
#73 0x04322cb3 in QAbstractButtonPrivate::click (this=0x8ebb600) at widgets/qabstractbutton.cpp:528
#74 0x04322fae in QAbstractButton::mouseReleaseEvent (this=0x8ebb570, e=0xbfa4f550) at widgets/qabstractbutton.cpp:1121
#75 0x0440609c in QToolButton::mouseReleaseEvent (this=0x8ebb570, e=0xbfa4f550) at widgets/qtoolbutton.cpp:721
#76 0x03f757f8 in QWidget::event (this=0x8ebb570, event=0xbfa4f550) at kernel/qwidget.cpp:7998
#77 0x04321d4e in QAbstractButton::event (this=0x8ebb570, e=0xa601c78) at widgets/qabstractbutton.cpp:1080
#78 0x04408bca in QToolButton::event (this=0x8ebb570, event=0xbfa4f550) at widgets/qtoolbutton.cpp:1163
#79 0x03f174dc in QApplicationPrivate::notify_helper (this=0x8cb4fd8, receiver=0x8ebb570, e=0xbfa4f550) at kernel/qapplication.cpp:4300
#80 0x03f1e9f7 in QApplication::notify (this=0x8cb4f30, receiver=0x8ebb570, e=0xbfa4f550) at kernel/qapplication.cpp:3865
#81 0x0060bf2a in KApplication::notify (this=0x8cb4f30, receiver=0x8ebb570, event=0xbfa4f550) at ../../kdeui/kernel/kapplication.cpp:302
#82 0x05c52a3b in QCoreApplication::notifyInternal (this=0x8cb4f30, receiver=0x8ebb570, event=0xbfa4f550) at kernel/qcoreapplication.cpp:704
#83 0x03f1d952 in QCoreApplication::sendEvent (receiver=0x8ebb570, event=0xbfa4f550, alienWidget=0x8ebb570, nativeWidget=0x8e73700, buttonDown=0x485b058, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#84 QApplicationPrivate::sendMouseEvent (receiver=0x8ebb570, event=0xbfa4f550, alienWidget=0x8ebb570, nativeWidget=0x8e73700, buttonDown=0x485b058, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#85 0x03fa9088 in QETWidget::translateMouseEvent (this=0x8e73700, event=0xbfa4fa6c) at kernel/qapplication_x11.cpp:4368
#86 0x03fa8511 in QApplication::x11ProcessEvent (this=0x8cb4f30, event=0xbfa4fa6c) at kernel/qapplication_x11.cpp:3379
#87 0x03fd760a in x11EventSourceDispatch (s=0x8cb8240, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#88 0x088f65e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#89 0x088fa2d8 in ?? () from /lib/libglib-2.0.so.0
#90 0x088fa4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#91 0x05c7e5d5 in QEventDispatcherGlib::processEvents (this=0x8c9b4c0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#92 0x03fd7135 in QGuiEventDispatcherGlib::processEvents (this=0x8c9b4c0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#93 0x05c51059 in QEventLoop::processEvents (this=0xbfa4fd64, flags=) at kernel/qeventloop.cpp:149
#94 0x05c514aa in QEventLoop::exec (this=0xbfa4fd64, flags=...) at kernel/qeventloop.cpp:201
#95 0x05c5569f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#96 0x03f17577 in QApplication::exec () at kernel/qapplication.cpp:3579
#97 0x0808b817 in main (argc=1, argv=0xbfa501f4) at /home/wolfemi1/svn/kmymoney/kmymoney/main.cpp:260

Reported using DrKonqi
Comment 1 Thomas Baumgart 2010-12-15 08:24:04 UTC
Looks like this is related to the fix I introduced for 256787.
Comment 2 Thomas Baumgart 2010-12-15 08:31:16 UTC
Crash happens with HBCI download as well.
Comment 3 Thomas Baumgart 2010-12-15 09:58:33 UTC
SVN commit 1206650 by tbaumgart:

Make sure to delete the transaction editor before the dialog in any case to avoid crashes.

BUG: 259916

 M  +13 -6     mymoneystatementreader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206650
Comment 4 Thomas Baumgart 2010-12-15 10:01:37 UTC
SVN commit 1206652 by tbaumgart:

Make sure to delete the transaction editor before the dialog in any case to avoid crashes.

Backported to stable branch

BUG: 259916

 M  +13 -6     mymoneystatementreader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206652