Make sure to delete the transaction editor before the dialog in any case to avoid crashes.

BUG: 259916

svn path=/trunk/extragear/office/kmymoney/; revision=1206650